<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:elevation="5dp"
        android:padding="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/state_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoSizeTextType="uniform"
                android:fontFamily="sans-serif-light"
                android:padding="10dp"
                android:text="Name"
                android:textColor="@color/black"
                android:textSize="18dp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:autoSizeTextType="uniform"
                        android:fontFamily="sans-serif-light"
                        android:gravity="center"
                        android:text="@string/total_case"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size" />

                    <TextView
                        android:id="@+id/st_total"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:autoSizeTextType="uniform"
                        android:textColor="@color/total"
                        android:textSize="@dimen/data_size" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:autoSizeTextType="uniform"
                        android:fontFamily="sans-serif-light"
                        android:gravity="center"
                        android:text="@string/total_recovery"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size" />

                    <TextView
                        android:id="@+id/st_recovered"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:autoSizeTextType="uniform"
                        android:text=""
                        android:textColor="@color/recover"
                        android:textSize="@dimen/data_size" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:autoSizeTextType="uniform"
                        android:fontFamily="sans-serif-light"
                        android:gravity="center"
                        android:text="@string/total_death"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size" />

                    <TextView
                        android:id="@+id/st_death"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:autoSizeTextType="uniform"
                        android:text=""
                        android:textColor="@color/death"
                        android:textSize="@dimen/data_size" />


                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>